Minor Cleanup.